# lace-lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  README.md
.github/workflows/: ci.yml  pages.yml
crates/lace-ast/: Cargo.toml
crates/lace-ast/src/: lib.rs
crates/lace-cli/: Cargo.toml
crates/lace-cli/src/: lint.rs  main.rs
crates/lace-effects/: Cargo.toml
crates/lace-effects/src/: lib.rs
crates/lace-interp/: Cargo.toml
crates/lace-interp/src/: lib.rs  tool_log.rs
crates/lace-interp/tests/: core_tests.rs  effect_enforcement_tests.rs  ergonomics_tests.rs  error_message_tests.rs  fs_tests.rs  map_literal_tests.rs  match_guard_tests.rs  math_tests.rs  new_tests.rs  phase14_tests.rs  phase34_tests.rs  phase35_tests.rs  phase36_tests.rs  record_file_tests.rs  stdlib_io_tests.rs  stdlib_tests.rs  time_tests.rs  try_tests.rs
crates/lace-lexer/: Cargo.toml
crates/lace-lexer/src/: lexer.rs  lib.rs  token.rs
crates/lace-lsp/: Cargo.toml
crates/lace-lsp/src/: document.rs  handler.rs  lib.rs  main.rs
crates/lace-lsp/tests/: diagnostics.rs
crates/lace-parser/: Cargo.toml
crates/lace-parser/src/: lib.rs  parser.rs
crates/lace-stdlib/: Cargo.toml
crates/lace-stdlib/src/: lib.rs
crates/lace-types/: Cargo.toml
crates/lace-types/src/: lib.rs
crates/lace-vm/: Cargo.toml
crates/lace-vm/src/: chunk.rs  compiler.rs  error.rs  lib.rs  opcode.rs  vm.rs
crates/lace-vm/tests/: vm_tests.rs
docs/: fn-test-closures.html  fn-test-env.html  fn-test-json.html  fn-test-list-fold.html  fn-triple.html  index.html  tutorial.md
docs/kanban/: lace-design-mission-brief.md  roadmap-make-it-real.md
docs/site/: cli.html  index.html  lsp.html  reference.html  stdlib.html  style.css  tutorial.html
docs/spec/: effect-system.md  grammar.md  language-spec.md  open-questions.md  repo-structure.md  runtime-model.md  stdlib-surface.md
editors/: helix-languages.toml  nvim-lspconfig.lua  zed-extension.json
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/snippets/: lace.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: lace.tmLanguage.json
examples/: combinators.lace  enums.lace  hello.lace  identity_threat_intel.lace  import_debug.lace  import_demo.lace  loops.lace  math_test.lace  math_utils.lace  phase10.lace  phase11.lace  phase12.lace  phase15.lace  phase18.lace  phase1_smoke.lace  phase20.lace  phase21.lace  phase25_qa.lace  phase26_qa.lace  phase27_qa.lace  phase28_qa.lace  phase29_qa.lace  phase30_qa.lace  phase31_qa.lace  phase33_qa.lace  phase34_qa.lace  phase35_qa.lace  phase36_qa.lace  phase38_qa.lace  phase39_qa.lace  phase3_demo.lace  phase40_qa.lace  phase41_qa.lace  phase42_qa.lace  phase9.lace  pipeline.lace  real_tools.lace  replay_tools.lace  stdlib_demo.lace  tests.lace  (+5 more)
examples/docs/: fn-double.html  fn-test-closures.html  fn-test-env.html  fn-test-json.html  fn-test-list-fold.html  fn-triple.html  index.html  tool-fetch-status.html  tool-greet.html
examples/modules/: greetings.lace  main.lace
examples/phase13/: lace.toml
examples/phase13/src/: main.lace  utils.lace
examples/phase43_project/: lace.toml
examples/phase43_project/src/: main.lace  math_utils.lace
examples/phase43_project/src/net/: helpers.lace
