[workspace]
members = [
    "crates/lace-ast",
    "crates/lace-lexer",
    "crates/lace-parser",
    "crates/lace-types",
    "crates/lace-effects",
    "crates/lace-interp",
    "crates/lace-stdlib",
    "crates/lace-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Gabe Corsini", "Hermes"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/gcorsini/lace"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustyline = "14"
colored = "2"
