[package]
name = "lace-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lace"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
serde.workspace = true
toml.workspace = true
lace-lexer = { path = "../lace-lexer" }
lace-parser = { path = "../lace-parser" }
lace-types = { path = "../lace-types" }
lace-effects = { path = "../lace-effects" }
lace-interp = { path = "../lace-interp" }
lace-ast = { path = "../lace-ast" }
rustyline.workspace = true
lace-lsp = { path = "../lace-lsp" }
tokio = { version = "1", features = ["rt"] }
