[package]
name = "lace-interp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lace-ast = { path = "../lace-ast" }
lace-parser = { path = "../lace-parser" }
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
chrono = "0.4"

[dev-dependencies]
lace-types = { path = "../lace-types" }

