[package]
name = "lace-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "lace-lsp"
path = "src/main.rs"

[dependencies]
lace-parser = { path = "../lace-parser" }
lace-types = { path = "../lace-types" }
lace-ast = { path = "../lace-ast" }
serde = { workspace = true }
serde_json = { workspace = true }
